# rotateBMP

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  llp6.docx  llp_lab_6_
src/: main.c
src/lib/: bmp.h  bmp_io.c  bmp_io.h  bmp_struct.h  bmp_transform.c  bmp_transform.h
